grammar.js
  word: ($) => $.word,

  rules: {
    program: ($) => optional($._statements),

    _statements: ($) => seq(repeat(seq($._statement, $._terminator)), $._statement, optional($._terminator)),

    command: ($) =>
      prec.left(
        choice(
          seq(
            repeat($._command_prefix),
            field('name', $.command_name),
            repeat(
              seq(
                optional($._backtick_comment_boundary),
                choice(field('argument', $._argument), field('redirect', $._redirect))
              )
            )
          ),
          repeat1($._command_prefix)
        )
      ),

    _command_prefix: ($) => choice(field('assignment', $.variable_assignment), field('redirect', $._redirect)),

    command_name: ($) => seq(optional($._backtick_comment_boundary), $._word),

    variable_assignment: ($) =>
      seq(
        field('name', choice($.variable_name, $.subscript)),
        field('operator', token.immediate(choice('=', '+='))),
        field('value', choice($._argument, $._hash_value, $.array, $._empty_value))
      ),

    // A value is not at the start of a word, so a leading `#` is literal (`color=#fff`).
    _hash_value: ($) => choice(alias($._hash_word, $.word), alias($._hash_concatenation, $.concatenation)),

    _redirect: ($) => choice($.file_redirect, $.heredoc_redirect, $.herestring_redirect),

    heredoc_redirect: ($) =>
      seq(
        optional(field('descriptor', $.file_descriptor)),
        field('operator', choice(alias($._heredoc_arrow, '<<'), alias($._heredoc_arrow_dash, '<<-'))),
        field('delimiter', $.heredoc_start)
      ),

    // The scanner opens a body at the newline that ends the line holding its `<<` operator, so bodies
    // appear, in operator order, wherever that newline falls.
    heredoc_body: ($) =>
      seq(
        $._heredoc_body_start,
        repeat(
          choice($.heredoc_content, $.simple_expansion, $.expansion, $.command_substitution, $.arithmetic_expansion)
        ),
        $.heredoc_end
      ),

    _word: ($) => choice($._word_part, $.concatenation),

    // Outside command position a leading `!(` is a negated extglob group rather than `!` negating a
    // subshell.
    _argument: ($) =>
      choice(
        $._word,
        alias($._negated_extglob_word, $.word),
        alias($._negated_extglob_pattern, $.extglob_pattern),
        alias($._negated_extglob_concatenation, $.concatenation)
      ),

    // A word led by a negated group (`!($x)b`, `!(a)$x`).
    word: () =>
      token(
        seq(
          choice(noneOf('#', ...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP),
          repeat(choice(noneOf(...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP, EXTGLOB_NEGATION))
        )
      ),

    // A `#` inside a word (`a$b#c`) is literal; only a `#` that begins a word starts a comment.
    // A group whose alternatives hold expansions (`@($(cmd)|b)`); a literal group stays inside a
    // `word`, whose token is longer than the group's opening token.
    simple_expansion: ($) =>
      seq(
        '$',
        choice(
          alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name),
          alias(token.immediate(/[0-9*@#?$!_-]/), $.special_variable_name)
        )
      ),

    // `${#}` and `${!}` are the special parameters `#` and `!`; with a following name they are the
    // length and indirection prefixes.
